2001-05-19  Dave Peticolas  <dave@krondo.com>

	* src/engine/sixtp.c (gnc_is_our_xml_file): fix mem leak

	* src/engine/io-gncxml-v2.c (gnc_book_load_from_xml_file_v2): fix
	mem leak

	* src/gnome/window-acct-tree.c: fix mem leak

	* src/doc/design/engine.texinfo: update docs

	* src/gnome/window-acct-tree.c: fix mem leaks

	* src/engine/io-gncxml-v2.c (gnc_counter_end_handler): fix mem
	leak

	* src/engine/gnc-account-xml-v2.c (account_parent_handler): fix
	mem leak

	* src/engine/Group.c (xaccFreeAccountGroup): set parent's child
	pointer to NULL
	(xaccAccountRemoveGroup): set parent's child pointer to NULL

	* src/engine/sixtp-dom-parsers.c (dom_tree_to_integer): fix mem leak

2001-05-18  James LewisMoss  <jimdres@mindspring.com>

	* src/FileDialog.c (gncFileNew): create new user dialog on new
	file new.

2001-05-18  Dave Peticolas  <dave@krondo.com>

	* src/engine/io-gncxml-w.c: remove

	* src/engine/Group.h: fix prototype

	* src/doc/design/engine.texinfo: update docs

	* src/gnome/dialog-price-editor.c: add button to remove
	prices before a user-entered date.

	* src/gnome/file-history.c: fix for menu changes

	* src/scm/report.scm: move reports menu to top-level

2001-05-17  James LewisMoss  <jimdres@mindspring.com>

	* src/engine/Makefile.am (libgncengine_la_SOURCES): remove
	io-gncxml-w.c.

2001-05-17  Dave Peticolas  <dave@krondo.com>

	* src/doc/design/engine.texinfo: update docs

	* src/engine/Account.c (xaccAccountRecomputeBalance): include
	frozen splits in reconciled balance. Fix variable names.

	* accounts/C/*: tweak detailed descriptions

	* doc/sgml/C/xacc-reports.sgml: fix warnings

	* doc/sgml/C/xacc-net-worth-barchart.sgml: fix warnings

	* doc/sgml/C/xacc-gnucash-web-browser.sgml: fix warnings

	* doc/sgml/C/xacc-gnome-mdi.sgml: fix warnings

	* doc/sgml/C/xacc-common-report-options.sgml: fix warnings

	* doc/sgml/C/Makefile.am: add new file to Makefile.am

	* src/doc/design/gnucash-design.texinfo: update docs
