@@ -6,7 +6,8 @@
 <title>Multicolumn Views</title>
 <para><emphasis>PICTURES NEEDED!!!!</emphasis> 
 </para>
-<para>This is not yet documented.</para>
+<para>If you want to display multiple reports in a single window, 
+you can use the multicolumn view display .</para>
 </sect1>
 </article>
 
